survey controller and routes done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <%= render "cover" %>
-<%= render "survey" %>
+<%= render "surveys/form", survey: @survey %>
 
 <%= content_for(:title, "BeenTho") %>
