--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -3,13 +3,24 @@
 * ------------------------------------- */
 
 .alert {
-  margin: 0;
+  margin-bottom: 0px;
   text-align: center;
   color: white;
+  padding: 5px 35px 5px 10px;
+  font-size: 14px;
+  position: absolute;
 }
+
 .alert-info {
   background: $green;
+  border: 1px solid $green;
 }
-.alert-warning {
+
+.alert-warning, .alert-danger {
   background: $red;
+  border: 1px solid $red;
+}
+
+.close {
+  font-size: 25px;
 }
