edited header title to display 邊度

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <%= render "cover" %>
 <%= render "surveys/form", survey: @survey %>
 
-<%= content_for(:title, "BeenTho") %>
+<%= content_for(:title, "BeenTho • 邊度") %>
