--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,17 +1,44 @@
-<div class="form">
+<div class="survey" id="survey">
+  <div class="form">
+  <h1>GET STARTED</h1>
   <%= simple_form_for(survey) do |s| %>
-    <%= s.input :name %>
-    <%= s.input :email %>
+    <div class="col-lg-6 col-sm-6 col-xs-12">
+      <%= s.input :name %>
+    </div>
+    <div class="col-lg-6 col-sm-6 col-xs-12">
+      <%= s.input :email %>
+    </div>
+    <div class="col-lg-6 col-sm-6 col-xs-12">
     <%= s.input :start_date %>
+  </div>
+  <div class="col-lg-6 col-sm-6 col-xs-12">
     <%= s.input :end_date %>
+  </div>
+  <div class="col-lg-6 col-sm-6 col-xs-12">
     <%= s.input :adults %>
+  </div>
+  <div class="col-lg-6 col-sm-6 col-xs-12">
     <%= s.input :children %>
+  </div>
+  <div class="col-lg-4 col-sm-4 col-xs-12">
     <%= s.input :purpose %>
+  </div>
+  <div class="col-lg-4 col-sm-4 col-xs-12">
     <%= s.input :preferences %>
+  </div>
+  <div class="col-lg-4 col-sm-4 col-xs-12">
     <%= s.input :budget %>
-    <%= s.input :asia %>
-    <%= s.input :memorable %>
-    <%= s.input :other %>
-    <%= s.submit %>
+  </div>
+  <div class="col-lg-6 col-sm-6 col-xs-12">
+    <%= s.input :asia, label: "Where else have you travelled in Asia?" %>
+  </div>
+  <div class="col-lg-6 col-sm-6 col-xs-12">
+    <%= s.input :memorable, label: "What is your most memorable travel experience?" %>
+  </div>
+  <div class="col-lg-12 col-sm-12 col-xs-12">
+    <%= s.input :other, label: "Any additional information that you would like to include?" %>
+  </div>
+    <%= s.submit "SUBMIT", class: "btn" %>
   <% end %>
+  </div>
 </div>
