centred survey submit button

--- a/app/views/pages/_cover.html.erb
+++ b/app/views/pages/_cover.html.erb
@@ -10,6 +10,8 @@
     </div>
   </div>
   <div class="cover-footer">
-    <i class="fa fa-angle-down" aria-hidden="true"></i>
+    <%= link_to "#survey" do %>
+      <i class="fa fa-angle-down" aria-hidden="true"></i>
+    <% end %>
   </div>
 </div>
