--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -1,4 +1,14 @@
+a {
+  text-decoration: none;
+  color: white;
+
+  &:hover {
+    color: white;
+  }
+}
+
 .btn {
   border: 1px solid $gray;
+  background: white;
   padding: 4px 50px;
 }
