--- a/app/assets/stylesheets/layouts/_survey.scss
+++ b/app/assets/stylesheets/layouts/_survey.scss
@@ -7,9 +7,14 @@
 
   h1 {
     text-align: center;
+    font-weight: bolder;
+    font-size: 40px;
+    letter-spacing: 10px;
+    margin: 10px;
   }
 }
 
 .form-action {
   text-align: center;
+  margin: 15px 0px;
 }
