added currency on budget label for better UX

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -10,10 +10,10 @@
           <%= s.input :email %>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
-          <%= s.input :start_date %>
+          <%= s.input :start_date, label: "Start Date" %>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
-          <%= s.input :end_date %>
+          <%= s.input :end_date, label: "End Date" %>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
           <%= s.input :adults %>
@@ -28,7 +28,7 @@
           <%= s.input :preferences %>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
-          <%= s.input :budget %>
+          <%= s.input :budget, label: "Budget (HK$)" %>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
           <%= s.input :asia, label: "Where else have you travelled in Asia?" %>
