--- a/app/views/pages/_cover.html.erb
+++ b/app/views/pages/_cover.html.erb
@@ -1,10 +1,7 @@
 <div class="cover" style='background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= image_path 'background.jpg' %>)'>
   <div class="cover-text">
-    <div class="title">
-      <!-- <h1>BEEN THO</h1> -->
-      <!-- <h1>邊 度</h1> -->
-      <h1>BEEN THO • 邊 度</h1>
-    </div>
+    <div class="title hidden-xs hidden-sm hidden-md"><h1>BEEN THO • 邊 度</h1></div>
+    <div class="title hidden-lg"><h1>BEEN THO</h1></div>
     <div class="description">
       A TRAVEL PROJECT BY PATTY AND JOYCE
     </div>
