--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -4,10 +4,10 @@
     <%= simple_form_for(survey) do |s| %>
       <div class="form-input">
         <div class="col-lg-6 col-sm-6 col-xs-12">
-          <%= s.input :name %>
+          <%= s.input :name, placeholder: "John Doe" %>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
-          <%= s.input :email %>
+          <%= s.input :email, placeholder: "john.doe@gmail.com" %>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
           <%= s.input :start_date, label: "Start Date" %>
@@ -22,22 +22,22 @@
           <%= s.input :children %>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
-          <%= s.input :purpose %>
+          <%= s.input :purpose, label: "Purpose of Trip", collection: Survey::PURPOSE, prompt: "Please Select" %>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
-          <%= s.input :preferences %>
+          <%= s.input :preferences, collection: Survey::PREFERENCES, prompt: "Please Select" %>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12">
           <%= s.input :budget, label: "Budget (HK$)" %>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
-          <%= s.input :asia, label: "Where else have you travelled in Asia?" %>
+          <%= s.input :asia, label: "Where else have you travelled in Asia?", collection: Survey::ASIA, prompt: "Please Select" %>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12">
-          <%= s.input :memorable, label: "What is your most memorable travel experience?" %>
+          <%= s.input :memorable, label: "What is your most memorable travel experience?", placeholder: "Example: Scuba Diving in Bali" %>
         </div>
         <div class="col-lg-12 col-sm-12 col-xs-12">
-          <%= s.input :other, label: "Any additional information that you would like to include?" %>
+          <%= s.input :other, label: "Any additional information that you would like to include?", placeholder: "Example: Looking for a warm weekend getaway with good food and beer" %>
         </div>
       </div>
       <div class="form-action">
